<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_0.02"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_0.07"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/icon_app"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/app_image"
            android:fontFamily="@font/montserratmedium"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textColor="@color/green_text_icons"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/app_image" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_all_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_0.72"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.05"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_0.60"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/all_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/test_gray_border"
            >

            <ImageView
                android:id="@+id/all_list_image"
                android:layout_width="104dp"
                android:layout_height="61dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/to_do_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/all_list_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44" />

            <TextView
                android:id="@+id/all_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:gravity="center_vertical"
                android:text="@string/all_list"
                android:textColor="@color/green_text_icons"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/all_list_image"
                app:layout_constraintEnd_toStartOf="@id/all_list_arrow" />

            <ImageView
                android:id="@+id/all_list_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/all_list_title"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="7dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_0.90"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.05"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_0.72"
        android:baselineAligned="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_open_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7dp"
            android:layout_weight="1.3"
            android:orientation="vertical"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/open_camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/green_background"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="43dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/camera"
                    app:layout_constraintBottom_toTopOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/take_photo"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7dp"
            android:layout_weight="1.7"
            android:background="@drawable/test_gray_border"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/baseline_search_24"
                app:layout_constraintBottom_toTopOf="@id/cerca"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cerca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/search_item"
                android:textColor="@color/green_text_icons"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lente" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03967168" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_0.07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_0.66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="40dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/card_all_list"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_0.05"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_0.95"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_0.09">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/home3"
            />
    </androidx.cardview.widget.CardView>

    //CONTROLLARE
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="254dp"
        android:layout_height="256dp"
        android:src="@drawable/home_illustration"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/all_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_0.09"/>

</androidx.constraintlayout.widget.ConstraintLayout>
